src/objects/OUC_Activity__c.object
<CustomObject>
    <fields>
        <fullName>ActivityOwner__c</fullName>
        <formula>Owner:User.FirstName &amp;&apos; &apos;&amp;Owner:User.LastName &amp;&apos;&apos;&amp; IF( ISBLANK(Owner:Queue.QueueName ) , &apos;&apos;, &quot;,&quot;&amp;Owner:Queue.QueueName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ActivityOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UI Task Code</label>
        <referenceTo>Activity_Type__c</referenceTo>
        <relationshipName>OUC_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowable_Outcomes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UI Outcome</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Activity_Type__c</field>
                <operation>equals</operation>
                <valueField>Activity_Outcomes__c.Activity_Type__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Activity_Outcomes__c</referenceTo>
        <relationshipName>OUC_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>Case__r.Service_Request_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Request Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SR Activities</relationshipLabel>
        <relationshipName>OUC_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Citizen_Email_On_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Citizen Email On Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Case__r.Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SR Activities</relationshipLabel>
        <relationshipName>SR_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <formula>CreatedBy.FirstName &amp;&quot; &quot;&amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUC_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Internal Comments (deprecated)</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Sort_Order__c</fullName>
        <label>Display Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_Internal__c</fullName>
        <label>Due Date (Internal)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date_SLA_Type__c</fullName>
        <formula>if(OR( isblank( Activity_Type__r.SLA__c), 
       isblank( TEXT( Activity_Type__r.SLAType__c ) )
     ), 
     TEXT(Case__r.SRType__r.SLAType__c ),
     TEXT(Activity_Type__r.SLAType__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date SLA Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_SLA__c</fullName>
        <formula>if(OR( isblank( Activity_Type__r.SLA__c),
       isblank( TEXT( Activity_Type__r.SLAType__c ) )
      ),
     Case__r.SLA__c ,
     TEXT(Activity_Type__r.SLA__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>If(Isblank(Due_Date_Internal__c) ,CreatedDate + Activity_Type__r.SLA__c, Due_Date_Internal__c)</formula>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Comments__c</fullName>
        <label>External Comments</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Outcome_Short__c</fullName>
        <description>Truncates Outcome to 40 characters for use in Case.Reason (aka Resolution0</description>
        <formula>LEFT(Final_Outcome__c,40)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome (Short)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Outcome__c</fullName>
        <formula>BLANKVALUE(Allowable_Outcomes__r.Name,Outcome__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Task_Code__c</fullName>
        <formula>blankvalue(Activity_Type__r.Name, Task_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Task_Short_Name__c</fullName>
        <formula>BLANKVALUE(Activity_Type__r.Task_Short_Name__c,Task_Short_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <formula>LastModifiedBy.FirstName &amp;&quot; &quot; &amp; LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUC_Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>LegacyId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Modified_Date__c</fullName>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Open311 Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <label>Public</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurrence_Interval__c</fullName>
        <label>Recurrence Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repeat_This_Task__c</fullName>
        <label>Repeat This Task</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Party__c</fullName>
        <label>Responsible Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Address__c</fullName>
        <formula>Case__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Agency__c</fullName>
        <formula>Case__r.Servicing_Agency_Expanded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Case_Status__c</fullName>
        <description>The field is to store SR Status and used for Workflow trigger</description>
        <label>SR Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Contact_Email__c</fullName>
        <label>SR Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SR_Expected_Resolution_Date__c</fullName>
        <formula>Case__r.Expected_Resolution_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Expected Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SR_Status__c</fullName>
        <formula>Text(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request History</label>
        <referenceTo>Service_Request_History__c</referenceTo>
        <relationshipName>OUC_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Code__c</fullName>
        <label>Open311 Task Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Short_Name__c</fullName>
        <label>Open311 Task Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUC_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SR Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Final_Task_Short_Name__c</columns>
        <columns>Case__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>SR_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Final_Outcome__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Completion_Date__c</columns>
        <columns>Display_Sort_Order__c</columns>
        <columns>Citizen_Email_On_Complete__c</columns>
        <columns>Final_Task_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Orphaned_Activities</fullName>
        <columns>NAME</columns>
        <columns>Final_Task_Short_Name__c</columns>
        <columns>Case__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>SR_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Final_Outcome__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Display_Sort_Order__c</columns>
        <columns>Citizen_Email_On_Complete__c</columns>
        <columns>Final_Task_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case__c</field>
            <operation>equals</operation>
        </filters>
        <label>All - Orphaned Activities</label>
        <sharedTo>
            <group>OUC_Report_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CFSA_Queue_OUC_Activity</fullName>
        <filterScope>Queue</filterScope>
        <label>CFSA Queue</label>
        <queue>CFSA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CFSA_Queue_OUC_All</fullName>
        <columns>NAME</columns>
        <columns>Final_Task_Short_Name__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>SR_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Final_Outcome__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Display_Sort_Order__c</columns>
        <columns>Citizen_Email_On_Complete__c</columns>
        <columns>Final_Task_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>CFSA Queue</label>
        <queue>CFSA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DCRA_Queue_OUC_Activity</fullName>
        <filterScope>Queue</filterScope>
        <label>DCRA Queue</label>
        <queue>DCRA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DCRA_Queue_OUC_All</fullName>
        <columns>NAME</columns>
        <columns>Final_Task_Short_Name__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>SR_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Final_Outcome__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Display_Sort_Order__c</columns>
        <columns>Citizen_Email_On_Complete__c</columns>
        <columns>Final_Task_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>DCRA Queue</label>
        <queue>DCRA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DDOE_Queue_OUC_Activity</fullName>
        <filterScope>Queue</filterScope>
        <label>DOEE Queue</label>
        <queue>DOEE_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DDOE_Queue_OUC_All</fullName>
        <columns>NAME</columns>
        <columns>Final_Task_Short_Name__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>SR_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Final_Outcome__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Display_Sort_Order__c</columns>
        <columns>Citizen_Email_On_Complete__c</columns>
        <columns>Final_Task_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>DOEE Queue</label>
        <queue>DOEE_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DDS_Queue_OUC_Activity</fullName>
        <filterScope>Queue</filterScope>
        <label>DDS Queue</label>
        <queue>DDS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DDS_Queue_OUC_All</fullName>
        <columns>NAME</columns>
        <columns>Final_Task_Short_Name__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>SR_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Final_Outcome__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Display_Sort_Order__c</columns>
        <columns>Citizen_Email_On_Complete__c</columns>
        <columns>Final_Task_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>DDS Queue</label>
        <queue>DDS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DDoT_Cityworks_OUC_Activity</fullName>
        <filterScope>Queue</filterScope>
        <label>DDoT Cityworks</label>
        <queue>DDoT_Cityworks</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DDoT_cityworks_OUC_All</fullName>
        <columns>NAME</columns>
        <columns>Final_Task_Short_Name__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>SR_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Final_Outcome__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Display_Sort_Order__c</columns>
        <columns>Citizen_Email_On_Complete__c</columns>
        <columns>Final_Task_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>DDoT Cityworks</label>
        <queue>DDoT_Cityworks</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DMV_Queue_OUC_All</fullName>
        <columns>NAME</columns>
        <columns>Final_Task_Short_Name__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>SR_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Final_Outcome__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Display_Sort_Order__c</columns>
        <columns>Citizen_Email_On_Complete__c</columns>
        <columns>Final_Task_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>DMV Queue</label>
        <queue>DMV_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DMV_Requests_OUC_Activity</fullName>
        <columns>NAME</columns>
        <columns>Final_Outcome__c</columns>
        <columns>Final_Task_Code__c</columns>
        <columns>Final_Task_Short_Name__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>SR_Status__c</columns>
        <columns>Citizen_Email_On_Complete__c</columns>
        <columns>External_Comments__c</columns>
        <columns>Display_Sort_Order__c</columns>
        <filterScope>Queue</filterScope>
        <label>DMV Queue</label>
        <queue>DMV_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DMV_Sample_Activity_Queue</fullName>
        <columns>NAME</columns>
        <columns>Case_Number__c</columns>
        <columns>External_Comments__c</columns>
        <columns>Final_Task_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Final_Outcome__c</columns>
        <filterScope>Queue</filterScope>
        <label>DMV Sample Activity Queue</label>
        <queue>DMV_Sample_Activity_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ACT-{00000000}</displayFormat>
        <label>SR Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SR Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Close_SR_Outcome_External_Comments</fullName>
        <active>true</active>
        <description>Per Dilshad: When Outcomes are chosen (or via Open311) that will Close the SR, External Comments cannot be null.</description>
        <errorConditionFormula>AND ( 
OR( CONTAINS ( Final_Outcome__c , &apos;Close SR&apos;), 
CONTAINS ( Final_Outcome__c , &apos;Closed,&apos;) ), 
ISPICKVAL(Status__c, &apos;Completed&apos;), 
OR( External_Comments__c = &apos;&apos;, 
ISNULL ( External_Comments__c) 
) 
)</errorConditionFormula>
        <errorDisplayField>External_Comments__c</errorDisplayField>
        <errorMessage>The selected outcome will close the service request. External Comments are required when selecting such an outcome.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_OUC_Activity_when_Case_Closed</fullName>
        <active>true</active>
        <description>Per Dilshad: Prevent edits to OUC Activities once the service request is closed.</description>
        <errorConditionFormula>Case__r.IsClosed</errorConditionFormula>
        <errorMessage>No edits can be made to OUC Activities when service request is closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test_External_Comments_mandatory</fullName>
        <active>true</active>
        <description>Per Dilshad: When Outcomes are chosen (or via Open311) that will Close the SR, External Comments cannot be null.</description>
        <errorConditionFormula>AND(OR(CONTAINS (Final_Outcome__c, &apos;Close SR&apos;), 
CONTAINS ( Final_Outcome__c , &apos;Closed,&apos;)), ISBLANK( External_Comments__c ), Allowable_Outcomes__r.Can_Close_SR__c = True )</errorConditionFormula>
        <errorDisplayField>External_Comments__c</errorDisplayField>
        <errorMessage>External comments are mandatory</errorMessage>
    </validationRules>
</CustomObject>